--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Main Page</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <section class="nav-cards">
+    <nav>
+      <a href="/pages/card-v1.html">Card v-1</a>
+      <a href="/pages/card-v2.html">Card v-2</a>
+    </nav>
+  </section>
 </body>
 </html>
