--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <section class="nav-cards">
-    <nav>
-      <a href="/pages/card-v1.html">Card v-1</a>
-      <a href="/pages/card-v2.html">Card v-2</a>
-    </nav>
+  <section class="wraper-cards">
+    <article class="card">
+      <section class="header-card">
+        <img class="" src="" alt="">
+        <h2>Film Director, Producer</h2>
+        <p>$14/hour</p>
+      </section>
+      <section class="body-card">
+        <ul class="list-inform">
+          <li>Jeffrey Abrams, 51</li>
+          <li>New Yourk, United States</li>
+          <li>Abrams was born in New Yourk City and raised in Los Angeles</li>
+        </ul>
+      </section>
+      <section class="footer-card">
+        <a href="#">View CV</a>
+        <a href="#">Make Offer</a>
+        <p>Online</p>
+      </section>
+    </article>
   </section>
 </body>
 </html>
