--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Main Page</title>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,21 +11,40 @@
   <section class="wraper-cards">
     <article class="card">
       <section class="header-card">
-        <img class="" src="" alt="">
+        <img class="user-img" src="imgs/user.jpg" alt="user">
         <h2>Film Director, Producer</h2>
         <p>$14/hour</p>
       </section>
       <section class="body-card">
         <ul class="list-inform">
           <li>Jeffrey Abrams, 51</li>
-          <li>New Yourk, United States</li>
+          <li><i class="fas fa-map-marker-alt"></i> New Yourk, United States</li>
           <li>Abrams was born in New Yourk City and raised in Los Angeles</li>
         </ul>
       </section>
       <section class="footer-card">
-        <a href="#">View CV</a>
-        <a href="#">Make Offer</a>
-        <p>Online</p>
+        <a class="btn btn-primary-outline" href="#">View CV</a>
+        <a class="btn btn-primary"  href="#">Make Offer</a>
+        <p><span class="circle"></span> Online</p>
+      </section>
+    </article>
+    <article class="card">
+      <section class="header-card">
+        <img class="user-img" src="imgs/Steven_Hallam-slide.jpg" alt="user">
+        <h2>Actor, Film Director</h2>
+        <p>$9/hour</p>
+      </section>
+      <section class="body-card">
+        <ul class="list-inform">
+          <li>Baltasar Kormakur, 52</li>
+          <li><i class="fas fa-map-marker-alt"></i> Reykjavik, Iceland</li>
+          <li>Icelandic actor</li>
+        </ul>
+      </section>
+      <section class="footer-card">
+        <a class="btn btn-primary-outline" href="#">View CV</a>
+        <a class="btn btn-primary"  href="#">Make Offer</a>
+        <p>Last seen: 17 minutes ago</p>
       </section>
     </article>
   </section>
