--- a/index.html
+++ b/index.html
@@ -8,45 +8,58 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <section class="wraper-cards">
-    <article class="card">
-      <section class="header-card">
-        <img class="user-img" src="imgs/user.jpg" alt="user">
-        <h2>Film Director, Producer</h2>
-        <p>$14/hour</p>
-      </section>
-      <section class="body-card">
-        <ul class="list-inform">
-          <li>Jeffrey Abrams, 51</li>
-          <li><i class="fas fa-map-marker-alt"></i> New Yourk, United States</li>
-          <li>Abrams was born in New Yourk City and raised in Los Angeles</li>
-        </ul>
-      </section>
-      <section class="footer-card">
-        <a class="btn btn-primary-outline" href="#">View CV</a>
-        <a class="btn btn-primary"  href="#">Make Offer</a>
-        <p><span class="circle"></span> Online</p>
-      </section>
-    </article>
-    <article class="card">
-      <section class="header-card">
-        <img class="user-img" src="imgs/Steven_Hallam-slide.jpg" alt="user">
-        <h2>Actor, Film Director</h2>
-        <p>$9/hour</p>
-      </section>
-      <section class="body-card">
-        <ul class="list-inform">
-          <li>Baltasar Kormakur, 52</li>
-          <li><i class="fas fa-map-marker-alt"></i> Reykjavik, Iceland</li>
-          <li>Icelandic actor</li>
-        </ul>
-      </section>
-      <section class="footer-card">
-        <a class="btn btn-primary-outline" href="#">View CV</a>
-        <a class="btn btn-primary"  href="#">Make Offer</a>
-        <p>Last seen: 17 minutes ago</p>
-      </section>
-    </article>
-  </section>
+  <main>
+    <section class="wraper-cards">
+      <article class="card">
+        <section class="header-card">
+          <div class="wraper-img">
+            <img class="user-img" src="imgs/user.jpg" alt="user">
+            <p class="bg-star"><i class="fas fa-star"></i></p>
+          </div>
+          <h2>Film Director, Producer</h2>
+          <p>€14/hour</p>
+        </section>
+        <section class="body-card">
+          <ul class="list-inform">
+            <li>Jeffrey Abrams, 51</li>
+            <li><i class="fas fa-map-marker-alt"></i> New Yourk, United States</li>
+            <li>Abrams was born in New Yourk City and raised in Los Angeles</li>
+          </ul>
+        </section>
+        <section class="footer-card">
+          <ul class="list-btns">
+            <li><a class="btn btn-primary-outline" href="#">View CV</a></li>
+            <li><a class="btn btn-primary"  href="#">Make Offer</a></li>
+          </ul>
+          <p><span class="circle"></span> Online</p>
+        </section>
+      </article>
+      <article class="card">
+        <section class="header-card">
+          <div class="wraper-img">
+            <img class="user-img" src="imgs/Steven_Hallam-slide.jpg" alt="user">
+            <p class="bg-star active-star"><i class="fas fa-star"></i></p>
+          </div>
+          <h2>Actor, Film Director</h2>
+          <p>€9/hour</p>
+        </section>
+        <section class="body-card">
+          <ul class="list-inform">
+            <li>Baltasar Kormakur, 52</li>
+            <li><i class="fas fa-map-marker-alt"></i> Reykjavik, Isleand</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet ducimus totam quod minima nam ad numquam quibusdam incidunt quos aliquid.</li>
+          </ul>
+        </section>
+        <section class="footer-card">
+          <ul class="list-btns">
+            <li><a class="btn btn-primary-outline" href="#">View CV</a></li>
+            <li><a class="btn btn-primary"  href="#">Make Offer</a></li>
+          </ul>
+          <p>Last seen: 17 minutes ago</p>
+        </section>
+      </article>
+    </section>
+  </main>
+  
 </body>
 </html>
